--- a/Resources/views/layout_local.html.twig
+++ b/Resources/views/layout_local.html.twig
@@ -1,25 +1,18 @@
 {% extends 'RgouBootstrapBundle::base.html.twig' %}
+{% set container_class = 'container-fluid' %}
 
 {% block head_stylesheets %}
     {% stylesheets
     'bundles/rgoubootstrap/bootstrap/css/bootstrap-combined.no-icons.min.css'
     'bundles/rgoubootstrap/bootstrap/css/bootstrap-responsive.min.css'
     'bundles/rgoubootstrap/font-awesome/css/font-awesome.min.css'
+    'bundles/rgoubootstrap/css/main.css'
     output='css/compiled.css'
     filter='cssrewrite' 
     filter='yui_css' 
     %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
     {% endstylesheets %}
-    <style type="text/css">
-        html, body {
-            height: 100%;
-        }
-        body {
-            padding-top: 50px;
-            /*padding-bottom: 50px;*/
-        }
-    </style>
 {% endblock head_stylesheets %}
 
 {% block head_javascripts %}
@@ -27,11 +20,58 @@
 {% endblock head_javascripts %}
 
 {# Top Navigation Bar #}
-{% block navbar_top %}    
+{% block navbar_top %}
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="{{ container_class }}">
+            
+            <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>            
+            
+            <a class="brand" href="#">Rgou</a>
+            
+            <!-- Everything you want hidden at 940px or less, place within here -->
+            <div class="nav-collapse collapse">
+                {{ knp_menu_render('main', {'currentClass': 'active', 'template': 'RgouBootstrapBundle:Menu:knp_menu.html.twig'}) }}
+                {{ knp_menu_render('RgouBootstrapBundle:Builder:userMenu', {'currentClass': 'active', 'template': 'RgouBootstrapBundle:Menu:knp_menu.html.twig'}) }}
+                {# knp_menu_render('RgouBootstrapBundle:Builder:mainMenu', {'currentClass': 'active', 'template': 'RgouBootstrapBundle:Menu:knp_menu.html.twig'}) #}
+            </div>            
+            
+        </div>
+    </div>
+</div>   
 {% endblock navbar_top %}
 
 {# Bottom Navigation Bar #}
-{% block navbar_bottom %}    
+{% block navbar_bottom %}
+{#
+<div class="navbar navbar-fixed-bottom">
+    <div class="navbar-inner">
+        <div class="{{ container_class }}">
+            
+            <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>            
+            
+            <a class="brand" href="#">Rgou</a>
+            
+            <!-- Everything you want hidden at 940px or less, place within here -->
+            <div class="nav-collapse collapse">
+                {{ knp_menu_render('main', {'currentClass': 'active', 'template': 'RgouBootstrapBundle:Menu:knp_menu.html.twig'}) }}
+                {{ knp_menu_render('RgouBootstrapBundle:Builder:userMenu', {'currentClass': 'active', 'template': 'RgouBootstrapBundle:Menu:knp_menu.html.twig'}) }}
+            </div>            
+            
+        </div>
+    </div>
+</div>
+#}  
 {% endblock navbar_bottom %}
 
 {% block footer_javascripts %}
