--- a/Resources/skeleton/crud-odm/actions/update.php.twig
+++ b/Resources/skeleton/crud-odm/actions/update.php.twig
@@ -10,15 +10,15 @@
      */
     public function updateAction($id)
     {
-        $em = $this->getDoctrine()->getManager();
+        $dm = $this->get('doctrine.odm.mongodb.document_manager');
 
-        $entity = $em->getRepository('{{ bundle }}:{{ entity }}')->find($id);
+        $record = $dm->getRepository('{{ bundle }}:{{ entity }}')->find($id);
 
-        if (!$entity) {
-            throw $this->createNotFoundException('Unable to find {{ entity }} entity.');
+        if (!$record) {
+            throw $this->createNotFoundException('Unable to find {{ entity }} document.');
         }
 
-        $editForm   = $this->createForm(new {{ entity_class }}Type(), $entity);
+        $editForm = $this->createForm(new {{ entity_class }}Type(), $record);
         $deleteForm = $this->createDeleteForm($id);
 
         $request = $this->getRequest();
@@ -26,21 +26,35 @@
         $editForm->bindRequest($request);
 
         if ($editForm->isValid()) {
-            $em->persist($entity);
-            $em->flush();
+            $dm->persist($record);
+            $dm->flush();
+            $this->get('session')->getFlashBag()->add(
+                'success',
+                'The record was successfully updated.'
+            );
 
-            return $this->redirect($this->generateUrl('{{ route_name_prefix }}_edit', array('id' => $id)));
+            {% if 'show' in actions -%}
+                return $this->redirect($this->generateUrl('{{ route_name_prefix }}_show', array('id' => $record->getId())));
+            {%- else -%}
+                return $this->redirect($this->generateUrl('{{ route_name_prefix }}'));
+            {%- endif %}
+
         }
 
+        $this->get('session')->getFlashBag()->add(
+            'error',
+            'There is a error in the form. Check below.'
+        );
+        
 {% if 'annotation' == format %}
         return array(
-            'entity'      => $entity,
+            'record'    => $record,
             'edit_form'   => $editForm->createView(),
             'delete_form' => $deleteForm->createView(),
         );
 {% else %}
         return $this->render('{{ bundle }}:{{ entity|replace({'\\': '/'}) }}:edit.html.twig', array(
-            'entity'      => $entity,
+            'record'    => $record,
             'edit_form'   => $editForm->createView(),
             'delete_form' => $deleteForm->createView(),
         ));
