--- a/Resources/skeleton/crud/actions/index.php.twig
+++ b/Resources/skeleton/crud/actions/index.php.twig
@@ -11,15 +11,15 @@
     {
         $em = $this->getDoctrine()->getManager();
 
-        $entities = $em->getRepository('{{ bundle }}:{{ entity }}')->findAll();
+        $records = $em->getRepository('{{ bundle }}:{{ entity }}')->findAll();
 
 {% if 'annotation' == format %}
         return array(
-            'entities' => $entities,
+            'records' => $records,
         );
 {% else %}
         return $this->render('{{ bundle }}:{{ entity|replace({'\\': '/'}) }}:index.html.twig', array(
-            'entities' => $entities,
+            'records' => $records,
         ));
 {% endif %}
     }
