--- a/Resources/skeleton/crud-odm/actions/create.php.twig
+++ b/Resources/skeleton/crud-odm/actions/create.php.twig
@@ -10,33 +10,43 @@
      */
     public function createAction()
     {
-        $document  = new {{ entity_class }}();
+        $record  = new {{ entity_class }}();
         $request = $this->getRequest();
-        $form    = $this->createForm(new {{ entity_class }}Type(), $document);
+        $form    = $this->createForm(new {{ entity_class }}Type(), $record);
         $form->bindRequest($request);
 
         if ($form->isValid()) {
             $dm = $this->get('doctrine.odm.mongodb.document_manager');
-            $dm->persist($document);
+            $dm->persist($record);
             $dm->flush();
 
+            $this->get('session')->getFlashBag()->add(
+                'success',
+                'The record was successfully created.'
+            );
+            
             {% if 'show' in actions -%}
-                return $this->redirect($this->generateUrl('{{ route_name_prefix }}_show', array('id' => $document->getId())));
+                return $this->redirect($this->generateUrl('{{ route_name_prefix }}_show', array('id' => $record->getId())));
             {%- else -%}
                 return $this->redirect($this->generateUrl('{{ route_name_prefix }}'));
             {%- endif %}
 
         }
 
+        $this->get('session')->getFlashBag()->add(
+            'error',
+            'There is a error in the form. Check below.'
+        );
+        
 {% if 'annotation' == format %}
         return array(
-            'document' => $document,
+            'record' => $record,
             'form'     => $form->createView(),
         );
 {% else %}
         return $this->render('{{ bundle }}:{{ entity|replace({'\\': '/'}) }}:new.html.twig', array(
-            'document' => $document,
-            'form'     => $form->createView(),
+            'record' => $record,
+            'form'   => $form->createView(),
         ));
 {% endif %}
     }
