--- a/Resources/skeleton/crud-odm/actions/delete.php.twig
+++ b/Resources/skeleton/crud-odm/actions/delete.php.twig
@@ -24,8 +24,19 @@
 
             $em->remove($entity);
             $em->flush();
+            
+            $this->get('session')->getFlashBag()->add(
+                'success',
+                'The record was successfully deleted.'
+            );
+
         }
 
+        $this->get('session')->getFlashBag()->add(
+            'error',
+            'There is a error deleting the record.'
+        );
+        
         return $this->redirect($this->generateUrl('{{ route_name_prefix }}'));
     }
 
