--- a/Resources/skeleton/crud-odm/views/edit.html.twig.twig
+++ b/Resources/skeleton/crud-odm/views/edit.html.twig.twig
@@ -2,21 +2,28 @@
 
 {{ "{% extends '" ~ rgou_bootstrap.template ~ "' %}" }}
 
-{{ '{% block headline %}' }}{{ "{{ '" ~ entity ~ "'|trans }} {{ 'edit'|trans }}" }}{{ '{% endblock headline %}' }}
+{{ "{% block headline %}" }}
+{{ "{{ '%entity% edit'|trans({'%entity%': '" ~ entity ~ "'},'rgoubootstrap') }}" }}
+<small> {{ "{{ 'or'|trans({},'rgoubootstrap') }}" }}
+    <a title="{{ "{{ 'Back to the list'|trans({},'rgoubootstrap') }}" }}" class="btn btn-small" href="{{ "{{ path('"~ route_name_prefix ~"') }}" }}">
+       <i class="icon-th-list icon-white"></i> {{ "{{ 'Back to the list'|trans({},'rgoubootstrap') }}" }}
+    </a>
+</small>
+{{ '{% endblock headline %}' }}
 
-{{ "{% block " ~ rgou_bootstrap.block ~ " %}" }}
+{{ "{% block content %}" }}
 
-<form class="form-horizontal" action="{{ "{{ path('"~ route_name_prefix ~"_update', { 'id': document.id }) }}" }}" method="post" {{ "{{ form_enctype(edit_form) }}" }}>
+<form class="form-horizontal" action="{{ "{{ path('"~ route_name_prefix ~"_update', { 'id': record.id }) }}" }}" method="post" {{ "{{ form_enctype(edit_form) }}" }}>
+
     {{ "{{ form_widget(edit_form) }}" }}
-    <p>
-        <button class="btn" type="submit">
-            <i class="icon-pencil"></i>
-            {{ "{{ 'edit'|trans }}" }}
-        </button>
-    </p>
-</form>
+    
 
-{% set hide_edit, hide_delete = true, false %}
+{% set hide_edit, hide_save, hide_save_add, hide_delete = true, false, true, false %}
 {% include 'views/others/record_actions.html.twig.twig' %}
+{% if ('delete' in actions) and (not hide_delete) %}
+{% include 'views/others/delete_form.html.twig.twig' %}
+{% endif %}
+
+</form>
 
 {{ "{% endblock %}" }}
