--- a/Resources/skeleton/crud-odm/views/show.html.twig.twig
+++ b/Resources/skeleton/crud-odm/views/show.html.twig.twig
@@ -1,8 +1,15 @@
 {{ "{% extends '" ~ rgou_bootstrap.template ~ "' %}" }}
 
-{{ '{% block headline %}' }}{{ "{{ '" ~ entity ~ "'|trans }}" }}{{ '{% endblock headline %}' }}
+{{ "{% block headline %}" }}
+{{ "{{ '%entity% show'|trans({'%entity%': '" ~ entity ~ "'},'rgoubootstrap') }}" }}
+<small> {{ "{{ 'or'|trans({},'rgoubootstrap') }}" }}
+    <a title="{{ "{{ 'Back to the list'|trans({},'rgoubootstrap') }}" }}" class="btn btn-small" href="{{ "{{ path('"~ route_name_prefix ~"') }}" }}">
+       <i class="icon-th-list icon-white"></i> {{ "{{ 'Back to the list'|trans({},'rgoubootstrap') }}" }}
+    </a>
+</small>
+{{ '{% endblock headline %}' }}
 
-{{ "{% block " ~ rgou_bootstrap.block ~ " %}" }}
+{{ "{% block content %}" }}
 
 <table class="record_properties table table-bordered table-condensed table-striped">
     <tbody>
@@ -13,23 +20,23 @@
 
         {%- if metadata.type in ['datetimetz', 'datetime'] %}
 
-            <td>{{ '{% if document.'~ field|replace({'_': ''}) ~' %}{{ document.'~ field|replace({'_': ''}) ~'|date(\'Y-m-d H:i:s\') }}{% endif %}' }}</td>
+            <td>{{ '{% if record.'~ field|replace({'_': ''}) ~' %}{{ record.'~ field|replace({'_': ''}) ~'|date(\'Y-m-d H:i:s\') }}{% endif %}' }}</td>
 
         {%- elseif metadata.type == 'date' %}
 
-            <td>{{ '{% if document.'~ field|replace({'_': ''}) ~' %}{{ document.'~ field|replace({'_': ''}) ~'|date(\'Y-m-d\') }}{% endif %}' }}</td>
+            <td>{{ '{% if record.'~ field|replace({'_': ''}) ~' %}{{ record.'~ field|replace({'_': ''}) ~'|date(\'Y-m-d\') }}{% endif %}' }}</td>
 
         {%- elseif metadata.type == 'time' %}
 
-            <td>{{ '{% if document.'~ field|replace({'_': ''}) ~' %}{{ document.'~ field|replace({'_': ''}) ~'|date(\'H:i:s\') }}{% endif %}' }}</td>
+            <td>{{ '{% if record.'~ field|replace({'_': ''}) ~' %}{{ record.'~ field|replace({'_': ''}) ~'|date(\'H:i:s\') }}{% endif %}' }}</td>
 
         {%- elseif metadata.type == 'boolean' %}
 
-            <td><i class="{{ '{{ document.'~ field|replace({'_': ''}) ~' ? \'icon-check\' : \'\' }}' }}"></i></td>
+            <td><i class="{{ '{{ record.'~ field|replace({'_': ''}) ~' ? \'icon-check\' : \'\' }}' }}"></i></td>
 
         {%- else %}
 
-            <td>{{ '{{ document.'~ field|replace({'_': ''}) ~' }}' }}</td>
+            <td>{{ '{{ record.'~ field|replace({'_': ''}) ~' }}' }}</td>
 
         {%- endif %}
 
@@ -40,7 +47,10 @@
     </tbody>
 </table>
 
-{% set hide_edit, hide_delete = false, false %}
+{% set hide_edit, hide_save, hide_save_add, hide_delete = false, true, true, false %}
 {% include 'views/others/record_actions.html.twig.twig' %}
+{% if ('delete' in actions) and (not hide_delete) %}
+{% include 'views/others/delete_form.html.twig.twig' %}
+{% endif %}
 
 {{ "{% endblock %}" }}
