--- a/Resources/skeleton/crud-odm/views/others/delete_form.html.twig.twig
+++ b/Resources/skeleton/crud-odm/views/others/delete_form.html.twig.twig
@@ -1,4 +1,4 @@
-<form action="{{ "{{ path('"~ route_name_prefix ~"_delete', { 'id': record.id }) }}" }}" method="post">
+<form id="delete_form" action="{{ "{{ path('"~ route_name_prefix ~"_delete', { 'id': record.id }) }}" }}" method="post">
 {{ '{{ form_widget(delete_form) }}' }}
 <div id="delete_modal" class="modal hide fade">
     <div class="modal-header">
@@ -9,19 +9,8 @@
         <p>{{ "{{ 'Are you sure you want delete this record?'|trans({},'rgoubootstrap') }}" }}</p>
     </div>
     <div class="modal-footer">
-        <a href="#" class="btn" type="button" data-dismiss="modal">{{ "{{ 'Cancel'|trans({},'rgoubootstrap') }}" }}</a>
-        <a href="#" class="btn btn-primary" type="submit">{{ "{{ 'Delete'|trans({},'rgoubootstrap') }}" }}</a>
+        <a href="#" class="btn btn-primary" type="button" data-dismiss="modal">{{ "{{ 'Cancel'|trans({},'rgoubootstrap') }}" }}</a>
+        <button class="btn btn-danger" type="submit">{{ "{{ 'Delete'|trans({},'rgoubootstrap') }}" }}</button>
     </div>
 </div>
 </form>
-{% block javascripts %}
-<script type="text/javascript">
-/*<![CDATA[*/
-$(function() {
-    $('#delete_record').on('click',function(){
-        $('#delete_modal').modal('show');
-    });
- });
-/*]]>*/
-</script>
-{% endblock javascripts %}
