--- a/Resources/skeleton/crud-odm/actions/delete.php.twig
+++ b/Resources/skeleton/crud-odm/actions/delete.php.twig
@@ -15,27 +15,30 @@
         $form->bindRequest($request);
 
         if ($form->isValid()) {
-            $em = $this->getDoctrine()->getManager();
-            $entity = $em->getRepository('{{ bundle }}:{{ entity }}')->find($id);
+            $dm = $this->get('doctrine.odm.mongodb.document_manager');
 
-            if (!$entity) {
-                throw $this->createNotFoundException('Unable to find {{ entity }} entity.');
+            $record = $dm->getRepository('{{ bundle }}:{{ entity }}')->find($id);
+
+            if (!$record) {
+                throw $this->createNotFoundException('Unable to find {{ entity }} document.');
             }
 
-            $em->remove($entity);
-            $em->flush();
+
+            $dm->remove($record);
+            $dm->flush();
             
             $this->get('session')->getFlashBag()->add(
                 'success',
                 'The record was successfully deleted.'
             );
 
-        }
+        } else {
 
-        $this->get('session')->getFlashBag()->add(
-            'error',
-            'There is a error deleting the record.'
-        );
+            $this->get('session')->getFlashBag()->add(
+                'error',
+                'There is a error deleting the record.'
+            );
+        }
         
         return $this->redirect($this->generateUrl('{{ route_name_prefix }}'));
     }
