--- a/Resources/skeleton/crud/views/edit.html.twig.twig
+++ b/Resources/skeleton/crud/views/edit.html.twig.twig
@@ -27,3 +27,7 @@
 </form>
 
 {{ "{% endblock %}" }}
+
+{% if ('delete' in actions) and (not hide_delete) %}
+{% include 'views/others/delete_javascript.html.twig.twig' %}
+{% endif %}
