--- a/Resources/skeleton/crud/views/show.html.twig.twig
+++ b/Resources/skeleton/crud/views/show.html.twig.twig
@@ -54,3 +54,7 @@
 {% endif %}
 
 {{ "{% endblock %}" }}
+
+{% if ('delete' in actions) and (not hide_delete) %}
+{% include 'views/others/delete_javascript.html.twig.twig' %}
+{% endif %}
